--- a/EasyEnglish.Theme/Components/_Imports.razor
+++ b/EasyEnglish.Theme/Components/_Imports.razor
@@ -5,3 +5,4 @@
 @using EasyEnglish.Theme.Interfaces
 @using EasyEnglish.Theme.Services
 @using EasyEnglish.Theme.Types
+@using EasyEnglish.Theme.Components
