--- a/EasyEnglish.Theme.Demo/Components/_Imports.razor
+++ b/EasyEnglish.Theme.Demo/Components/_Imports.razor
@@ -1,4 +1,5 @@
 ﻿@using System.Net.Http
+@using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
@@ -6,21 +7,9 @@
 @using Microsoft.JSInterop
 @using EasyEnglish.Theme.Demo
 @using EasyEnglish.Theme.Demo.Components
-@using EasyEnglish.Theme.Demo.Services
 @using EasyEnglish.Theme.Demo.Models
-
-@* Theme imports *@
 @using EasyEnglish.Theme.Components
-@using EasyEnglish.Theme.Components.Typography
 @using EasyEnglish.Theme.Constants
 @using EasyEnglish.Theme.Services
 @using EasyEnglish.Theme.Types
-
-@* Aliases to avoid conflicts *@
-@using ThemeButton = EasyEnglish.Theme.Components.Button
-@using ThemeCard = EasyEnglish.Theme.Components.Card
-@using ThemeBadge = EasyEnglish.Theme.Components.Badge
-@using ThemeInput = EasyEnglish.Theme.Components.Input
-@using ThemeContainer = EasyEnglish.Theme.Components.Container
-@using ThemeLoading = EasyEnglish.Theme.Components.Loading
-@using ThemeProgressBar = EasyEnglish.Theme.Components.ProgressBar
+@using EasyEnglish.Theme.Interfaces
